sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:7: error: not found: value pluspetit
      if (pluspetit(j,i)){
          ^AlgSelectionSort:11: error: not found: value j
    echange(j,i)
            ^