sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var long:Int = getNombreValeurs -1
  for (i<- 0 to long) {
    var min:Int=i
    for (j<-i to long){
      if (pluspetit(j,i)){
        min=j
      }
    }
    echange(j,i)
  }
}